// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Games /> Snapshots renders error correctly 1`] = `
<div
  className="error"
>
  There is an error!
</div>
`;

exports[`<Games /> Snapshots renders loading game correctly 1`] = `
<div
  className="loading"
>
  Loading...
</div>
`;

exports[`<Games /> Snapshots renders new game button correctly 1`] = `
<div
  className="new-game"
>
  <a
    className="waves-effect waves-light btn-small"
    onClick={[MockFunction]}
  >
    New game
  </a>
</div>
`;
